# gratis_protocol

./: .gitignore  Cargo.toml  README.md  clean.sh  deploy.sh  dev-deploy.sh  package-lock.json
.cargo/: config.toml
architecture/: protocol_state_machine.drawio
scripts/: pyth.js  update.sh
src/: asset.rs  big_decimal.rs  external.rs  lib.rs  linked_list.rs  main.rs  oracle.rs  util.rs
